[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"                                      # error handling
bytes = "1.3.0"                                        # helps manage buffers
flate2 = "1.0.34"                                      # compression
sha1 = "0.11.0-rc.3"
thiserror = "1.0.38"
hex-literal = "1.1.0"
base16ct = { version = "0.3.0", features = ["alloc"] }
